--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
   <body>
 
     <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: #003459;">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: #007EA7">
         <a class="navbar-brand" href="/">MyPrettyList</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -23,7 +23,7 @@
                 </li>
                 {{#if user}}
                 <li class="nav-item">
-                   <a class="nav-link" href="/users/{{user.id}}">Profile</a>
+                   <a class="nav-link" href="/Classifieds/{{user.id}}/Yours">Profile</a>
                 </li>
                 <li class="nav-item">
                    <a class="nav-link" href="/Classifieds/addHousing">Add classifieds</a>
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="/users/login">Log In</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/users/signup">Sign Up</a>
+                    <a class="nav-link" href="/" data-toggle="modal" data-target="#exampleModalCenter">Sign Up</a>
                 </li>
                 {{/if}}
             </ul>
