--- a/views/houses/houses.hbs
+++ b/views/houses/houses.hbs
@@ -22,7 +22,7 @@
               <div class="card-body">
                   <h5 class="card-title">{{this.title}}</h5>
                   <p class="card-text">{{this.description}}.</p>
-                 <p> <a href="#" class="btn btn-primary">Read more</a></p>
+                 {{!-- <p> <a href="#" class="btn btn-primary">Read more</a></p> --}}
                    <small>Last updated: {{this.updated_at}}</small>
               </div>
             <ul class="list-group list-group-flush">
