--- a/views/houses/houses.hbs
+++ b/views/houses/houses.hbs
@@ -9,7 +9,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <form action="/" method="POST">
+        <form action="/{{stateAcronym}}" method="POST">
             <div class="form-group">
               <label for="username">Username</label>
               <input id="username" class="form-control" type="text" name="username" placeholder="Your username">
