under construction after project

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -61,7 +61,7 @@
 
     <div class="row SecondSection">
       <div class="col-sm-12">
-        <p>Created by me gg (the page not the map)</p>
+        <p>Under construction</p>
       </div>
     </div>
  </div>
